some more translations

--- a/wwwroot/assets/i18n/en.json
+++ b/wwwroot/assets/i18n/en.json
@@ -1,3 +1,7 @@
 {
-  "HOME": "home test"
+  "HOME": "Home",
+  "COUNTER": "Counter",
+  "SWITCH_LANGUAGE": "Switch language",
+  "ENGLISH": "English",
+  "NORWEGIAN": "Norwegian"
 }
