--- a/wwwroot/assets/i18n/en.json
+++ b/wwwroot/assets/i18n/en.json
@@ -1,5 +1,7 @@
 {
   "HOME": "Home",
+  "HOME_FEATURE_LIST_TITLE": "What does this Starter offer?",
+  "HOME_ISSUES_TITLE": "Having issues?",
   "COUNTER": "Counter",
   "SWITCH_LANGUAGE": "Switch language",
   "ENGLISH": "English",
